--- a/main.css
+++ b/main.css
@@ -66,9 +66,29 @@ main {
 .project-logo {
     width: 6rem;
 }
+.project-link {
+    display: flex;
+    justify-content: center;
+    gap: 0.25rem;
+    font-weight: 500;
+    color: black;
+    text-decoration: none;
+    padding: 0.5rem;
+    background: white;
+    width: fit-content;
+    border-radius: 0.5rem;
+}
+.project-link:hover {
+    color: black;
+    background: rgba(255, 255, 255, 0.8);
+}
+.contact:hover {
+    color: rgba(255, 255, 255, 0.8);
+}
 a {
     color: white;
 }
+
 
 .contacts {
     display: flex;
@@ -123,4 +143,37 @@ a {
     mask-repeat: no-repeat;
     -webkit-mask-size: 100% 100%;
     mask-size: 100% 100%;
+}
+
+.fa6-solid--link {
+    display: inline-block;
+    width: 1.25em;
+    height: 1.25em;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 640 512'%3E%3Cpath fill='%23000' d='M579.8 267.7c56.5-56.5 56.5-148 0-204.5c-50-50-128.8-56.5-186.3-15.4l-1.6 1.1c-14.4 10.3-17.7 30.3-7.4 44.6s30.3 17.7 44.6 7.4l1.6-1.1c32.1-22.9 76-19.3 103.8 8.6c31.5 31.5 31.5 82.5 0 114L422.3 334.8c-31.5 31.5-82.5 31.5-114 0c-27.9-27.9-31.5-71.8-8.6-103.8l1.1-1.6c10.3-14.4 6.9-34.4-7.4-44.6s-34.4-6.9-44.6 7.4l-1.1 1.6C206.5 251.2 213 330 263 380c56.5 56.5 148 56.5 204.5 0zM60.2 244.3c-56.5 56.5-56.5 148 0 204.5c50 50 128.8 56.5 186.3 15.4l1.6-1.1c14.4-10.3 17.7-30.3 7.4-44.6s-30.3-17.7-44.6-7.4l-1.6 1.1c-32.1 22.9-76 19.3-103.8-8.6C74 372 74 321 105.5 289.5l112.2-112.3c31.5-31.5 82.5-31.5 114 0c27.9 27.9 31.5 71.8 8.6 103.9l-1.1 1.6c-10.3 14.4-6.9 34.4 7.4 44.6s34.4 6.9 44.6-7.4l1.1-1.6C433.5 260.8 427 182 377 132c-56.5-56.5-148-56.5-204.5 0z'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+}
+@media (min-width: 374px) and (max-width: 960px) {
+    main {
+        margin: 2.5rem 0.5rem;
+    }
+    .project-title {
+        font-size: 1rem;
+    }
+    .project-description {
+        font-size: 0.9rem;
+    }
+    .project-link {
+        font-size: 0.9rem;
+    }
+}
+@media (min-width: 768px) and (max-width: 1600px) {
+    main {
+        margin: 5rem 6rem;
+    }
 }
