--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,32 @@
+html {
+  background: #171717;
+  color: white;
+  font-family: Inter, serif;
+}
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: auto;
+  margin: 5rem 25rem;
+}
+a {
+  color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 374px) and (max-width: 960px) {
+  main {
+    margin: 2.5rem 0.5rem;
   }
-  to {
-    transform: rotate(360deg);
+  .project-title {
+    font-size: 1rem;
+  }
+  .project-description {
+    font-size: 0.9rem;
+  }
+  .project-link {
+    font-size: 0.9rem;
   }
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (min-width: 768px) and (max-width: 1600px) {
+  main {
+    margin: 5rem 6rem;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
